--- a/src/BuildScanPushDockerImage.yml
+++ b/src/BuildScanPushDockerImage.yml
@@ -12,7 +12,7 @@ on:
       ImageVersion:
         description: 'Provide the Image Version to Build'
         required: true
-        default: 'latest'
+        default: '1.0'
       ImageName:
         description: 'Name of the Image'
         required: true
